--- a/src/App.css
+++ b/src/App.css
@@ -21,21 +21,13 @@ body {
   flex-direction: column;
   justify-content: center;
 }
-@keyframes slideUp {
-  from {
-    transform: translateY(40px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
+
+
 
 
 .hero,
 .hero .navbar {
-  animation: slideUp 0.6s ease-out forwards;
+  animation: fadeIn 1s ease-in;
 }
 
 .navbar {
@@ -96,9 +88,11 @@ body {
 .download-cv-btn:hover {
   background: #a03030;
 }
-/* Section Headings */
+
+
 section {
   margin-top: 3rem;
+
 }
 
 section h2 {
